# redfish-mcp

./: .gitignore  README.md  endpoints.json  main.py  mcp_server.py  pyproject.toml
mcp_service/: connection.py  redfish_service.py
redfish_client/: client.py  config.py
redfish_client/auth/: base.py  session.py
redfish_client/resources/: base.py  firmware.py  systems.py
redfish_client/transport/: base.py  requests.py
